--- a/config/facebook.yml
+++ b/config/facebook.yml
@@ -1,3 +1,3 @@
 development:
-  app_id: 1573822299559723
-  secret_key: 9934c6df1f735f2bdd82b2c91d6eb85f
+  app_id: ENV['FACEBOOK_APP_ID']
+  secret_key: ENV['FACEBOOK_SECRET_KEY']
