--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -1,3 +1,3 @@
 development:
-  api_key: JI6S08yaB0NlaKkWjeV3KAejm
-  secret: hq8VmDsB7l8b1bWAUcFaozzdErtB8JXcrJIqDhAIQt6JBaSOs9
+  api_key: ENV{'TWITTER_API_KEY'}
+  secret: ENV['TWITTER_SECRET']
