--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+base: &base
   adapter: postgresql
-  pool: 5
-  timeout: 5000
+  encoding: utf8
+  username:
+  password:
   host: 127.0.0.1
+  pool: 5
 
 development:
-  <<: *default
+  <<: *base
   database: snoozypost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *base
   database: snoozypost
 
 production:
-  <<: *default
+  <<: *base
   database: snoozypost
