--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -1,3 +1,7 @@
 development:
-  api_key: ENV{'TWITTER_API_KEY'}
-  secret: ENV['TWITTER_SECRET']
+  api_key: JI6S08yaB0NlaKkWjeV3KAejm
+  secret: hq8VmDsB7l8b1bWAUcFaozzdErtB8JXcrJIqDhAIQt6JBaSOs9
+
+production:
+  api_key: ENV['TWITTER_APP_KEY']
+  secret: ENV['TWITTER_APP_SECRET']
